# facts

./: README.md  githfield.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: build_universe.py  weave_classification.py
seeds/: classification.jsonl
src/finfacts/: __init__.py  classification.py  derive.py  model.py  universe.py
tests/: test_build_universe.py  test_classification.py  test_derive.py  test_derive_pack2.py  test_dimensions.py  test_model.py  test_universe.py
